Resolving overlap issue.

--- a/my-portfolio/src/pages/hero/hero.css
+++ b/my-portfolio/src/pages/hero/hero.css
@@ -52,6 +52,6 @@
   }
 
   .hero-section {
-    margin-bottom: 80px;
+    margin-bottom: 110px;
   }
 }
